force-app/main/default/objects/Dutch_Business_Dossier__c/Dutch_Business_Dossier__c.object-meta.xml
<CustomObject>
    <description>Information on a business establishment including information related to finance and structure.</description>
    <label>Dutch Business Dossier</label>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dutch Business Dossiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>

</CustomObject>