force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dutch Business Dossiers</relationshipLabel>
    <relationshipName>Dutch_Business_Dossiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>