force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Authorized_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Share_Capital_Currency__c</fullName>
    <label>Currency For Authorized Share Capital</label>
    <length>20</length>
    <type>Text</type>
</CustomField>