force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Chamber_Number__c.field-meta.xml
<CustomField>
    <fullName>Chamber_Number__c</fullName>
    <description>The chamber number is the number of the Chamber of Commerce office which manages this dossier.


01	Noord Nederland
08	Oost Nederland
09	Centraal Gelderland
14	Limburg
17	Brabant
20	Zuid West Nederland
24	Rotterdam
27	Den Haag
30	Midden Nederland
32	Gooi-, Eem- en Flevoland
34	Amsterdam
37	Noordwest-Holland</description>
    <label>Chamber Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01	Noord Nederland</fullName>
            </value>
            <value>
                <fullName>08	Oost Nederland</fullName>
            </value>
            <value>
                <fullName>09	Centraal Gelderland</fullName>
            </value>
            <value>
                <fullName>14	Limburg</fullName>
            </value>
            <value>
                <fullName>17	Brabant</fullName>
            </value>
            <value>
                <fullName>20	Zuid West Nederland</fullName>
            </value>
            <value>
                <fullName>24	Rotterdam</fullName>
            </value>
            <value>
                <fullName>27	Den Haag</fullName>
            </value>
            <value>
                <fullName>30	Midden Nederland</fullName>
            </value>
            <value>
                <fullName>32	Gooi-, Eem- en Flevoland</fullName>
            </value>
            <value>
                <fullName>34	Amsterdam</fullName>
            </value>
            <value>
                <fullName>37	Noordwest-Holland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>