force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Class_Personnel_Fulltime__c.field-meta.xml
<CustomField>
    <fullName>Class_Personnel_Fulltime__c</fullName>
    <label>Class Personnel Fulltime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class_Personnel</valueSetName>
    </valueSet>
</CustomField>