force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Contact_Gender__c.field-meta.xml
<CustomField>
    <fullName>Contact_Gender__c</fullName>
    <label>Contact Gender</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>m	Male</fullName>
            </value>
            <value>
                <fullName>f	Female</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>