force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Contact_Title2__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title2__c</fullName>
    <description>Second title of the contact person of this business.</description>
    <label>Contact Second Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>