force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Discontinuation_Date__c.field-meta.xml
<CustomField>
    <fullName>Discontinuation_Date__c</fullName>
    <description>The date when the business was discontinued (Dutch: datum wanneer de activiteiten gestaakt zijn)</description>
    <label>Discontinuation Date</label>
    <type>Date</type>
</CustomField>