force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Establishment_Address__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Address__c</fullName>
    <description>A DutchBusinessFormattedAddress entry.</description>
    <label>Establishment Address</label>
    <type>TextArea</type>
</CustomField>