force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Indication_Non_Mailing__c.field-meta.xml
<CustomField>
    <fullName>Indication_Non_Mailing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean indicating if the business has specified that the ‘Vereniging Kamers van Koophandel’ and the ‘de kamers van koophandel’ may not supply the business’ information to third parties for direct marketing purposes.</description>
    <label>Indication Non Mailing</label>
    <type>Checkbox</type>
</CustomField>