force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Indication_Organisation_Code__c.field-meta.xml
<CustomField>
    <fullName>Indication_Organisation_Code__c</fullName>
    <description>Possible values:
O	Business (Dutch: ‘Onderneming)
V	Association (Dutch: ‘Vereniging’)
S	Non-profit organisation (Dutch: ‘Stichting’)
K	Church community (Dutch: ‘Kerkgenootschap’)
&lt;empty&gt;	Unknown</description>
    <label>Indication Organisation Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>V</fullName>
                <label>Association</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Non-profit organisation</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>Church community</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Business</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>