force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Issued_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Issued_Share_Capital_Currency__c</fullName>
    <label>Issued Share Capital Currency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>