force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Legal_Form_Text__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form_Text__c</fullName>
    <description>Description of the legal form (in Dutch).</description>
    <label>Legal Form Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>