force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Main_Establishment_Number__c.field-meta.xml
<CustomField>
    <fullName>Main_Establishment_Number__c</fullName>
    <description>The establishment number for the main establishment of the business.  Optional.</description>
    <label>Main Establishment Number</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>