force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Paid_Up_Share_Capital_Currency__c.field-meta.xml
<CustomField>
    <fullName>Paid_Up_Share_Capital_Currency__c</fullName>
    <label>Currency For Paid Up Share Capital</label>
    <length>20</length>
    <type>Text</type>
</CustomField>