force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Personnel_CI__c.field-meta.xml
<CustomField>
    <fullName>Personnel_CI__c</fullName>
    <description>The total number of employees as recorded by the company.info software</description>
    <label>Number Of Employees wrt Company Info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>