force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Personnel_CI_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Personnel_CI_Reference_Date__c</fullName>
    <description>A DutchBusinessDateV3.  The reference date (peildatum) of the number of employees recorded by company.info</description>
    <label>Reference Date Of Nr Of Employees wrt CI</label>
    <type>Date</type>
</CustomField>