force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Personnel_Fulltime__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Fulltime__c</fullName>
    <label>Personnel Fulltime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>