force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Rsin_Number__c.field-meta.xml
<CustomField>
    <fullName>Rsin_Number__c</fullName>
    <description>The 9 number RSIN (`Rechtspersonen Samenwerkingsverbanden Informatie Nummer`) identifying the business’ legal entity.  Optional, businesses with a sole proprietor (`eenmanszaken`) do not have an rsin_number.</description>
    <label>Rsin Number</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>