force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Sbi_Collection__c.field-meta.xml
<CustomField>
    <fullName>Sbi_Collection__c</fullName>
    <description>Collection of SBI’s DutchBusinessSBICollection</description>
    <label>Sbi_Collection</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>