force-app/main/default/objects/Dutch_Business_Dossier__c/fields/Secondary_Sbi_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sbi_Code_2__c</fullName>
    <label>Secondary SBI Code 2</label>
    <length>5</length>
    <type>Text</type>
</CustomField>